# qitos

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  README.zh.md  agent.md  health.md  mkdocs.yml  pyproject.toml  security_report.md  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: docs.json  index.mdx  installation.mdx  quickstart.mdx
examples/: README.md
gh-pages-redirect/: 404.html  index.html
qitos/: __init__.py  cli.py
sandbox/: run_e2e.py
scripts/: cybergym_run_report.py  cybergym_success_rate.py  run_batch100_sampled_conc4.sh  run_batch100_sampled_conc4_v7.sh  run_batch100_sampled_conc4_v8.sh  run_batch100_strategy_memory_tmux.sh  run_cybergym_batch.py  run_failed_maxtok32k_tmux.sh  start_batch100_sampled_conc4_v7_server.sh  start_batch100_sampled_conc4_v8_server.sh
tests/: test_advanced_tools_and_executor.py  test_benchmark_cybench.py  test_benchmark_cybergym_recipe.py  test_benchmark_gaia.py  test_benchmark_tau_bench.py  test_compact_history.py  test_cybergym_agent_poc_profile.py  test_cybergym_candidate_failure_records.py  test_cybergym_context_retention.py  test_cybergym_context_snip.py  test_cybergym_evidence_selector.py  test_cybergym_parallel_tools_prompt.py  test_cybergym_run_report.py  test_cybergym_success_rate_script.py  test_cybergym_task_spec.py  test_desktop_benchmark_v05.py  test_engine_config.py  test_engine_core_flow.py  test_engine_result_traces.py  test_env_contract.py  test_examples_layout.py  test_examples_smoke.py  test_glm_tokenizer_count.py  test_harness_presets.py  test_lats.py  test_magentic_one.py  (+14 more)
(+264 files in other folders)
