[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "site",
  "references",
  "qitos.egg-info",
  ".pytest_cache",
  "__pycache__",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
  "^qitos/benchmark/",
  "^qitos/kit/tool/experimental/",
  "^site/",
  "^dist/",
]
